--- a/Warps/src/main/resources/plugin.yml
+++ b/Warps/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Warps
 version: ${project.version}
 main: com.nelsontron.warps.Main
-depend: [ Core ]
+softdepend: [ Core ]
 api-version: 1.13
 authors: [nelsontron]
 description: a simplistic warp plugin
